[tool.poetry]
name = "process-killer"
version = "0.1.0"
description = ""
authors = ["endogen <081081@gmx.net>"]
readme = "README.md"
packages = [{include = "process_killer"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flet = "^0.11.0"
psutil = "^5.9.6"
pyinstaller = "^6.1.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
